Mainly UI updates

--- a/KarynPHD/ClientApp/src/languages/en.json
+++ b/KarynPHD/ClientApp/src/languages/en.json
@@ -28,7 +28,7 @@
     },
     "Noteboard":{
         "Title":"Idea Board",
-        "Description":"Think of a space or street in Malta that you would like to see improved to  encourage more people to walk or cycle. If you see other ideas you agree with, ‘heart’ them!",
+        "Description":"Think of a space or a street within your locality that you would like to see improved to encourage more people to walk rather than use their car. Add your ideas to the note board below and ‘heart’ ideas proposed by other users that you agree with.",
         "Add":"Add Idea",
         "Next":"Next",
         "NextTooltip":"Please leave a note to proceed.",
